--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "firebase-functions": "^2.0.2",
+    "firebase-admin": "^5.13.1",
+    "googleapis": "^27.0.0",
+    "actions-on-google": "2.2.0",
     "dialogflow-fulfillment": "0.5.0"
   }
 }
