--- a/app.json
+++ b/app.json
@@ -2,5 +2,5 @@
   "name": "dental-services",
   "description": "Dental Services",
   "repository": "",
-  "keywords": ["Dental", "dialogflow", "natural language"]
+  "keywords": ["Dental", "dialogflow", "natural language","Services"]
 }
