--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Shankarnath",
+  "author": "Shankarnath.S",
   "dependencies": {
     "actions-on-google": "2.2.0",
     "body-parser": "^1.15.0",
